--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@emotion/styled": "^11.11.5",
     "@tanstack/react-query": "^5.29.2",
     "framer-motion": "^11.1.7",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
